[CSS] Fix bug with grid behaving not responsive

--- a/style.css
+++ b/style.css
@@ -221,15 +221,18 @@ ul li:nth-child(2) {
 
 .gallery-wrapper {
     margin: 0 100px 0 100px;
-    display: grid;                              /* why is this grid not RWD? */
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    display: grid;                              
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .photo-box {
     border: 2px solid #dddddd;
     justify-self: center;
     margin: 20px;
+}
+
+.photo-box img {
+    width: 100%;
 }
 
 .photo-box h4 {
